removed min-width to avoid scroll bar on small scr

--- a/_sass/base/_background.scss
+++ b/_sass/base/_background.scss
@@ -3,7 +3,6 @@ body {
   font-size: 1.2em;
   line-height: 1.3;
   position: relative;
-  min-width: 320px;
   max-width: 50em;
   max-width: none;
   margin: 0 auto;
